--- a/config/config.json
+++ b/config/config.json
@@ -4,7 +4,7 @@
   "secret": "hi,ksta",
   "sequelize": {
     "dialect": "mysql",
-    "host": "localhost",
+    "host": "10.10.0.2",
     "user": "root",
     "database": "Taxi",
     "password": "LJxiP:p0",
